Clean up of comment sections. Added login and register model location comments in nav. Created main content container-fluid to pull away from sides of browser.

--- a/0_BasicBootstrapWebsiteTemplate/index.html
+++ b/0_BasicBootstrapWebsiteTemplate/index.html
@@ -21,7 +21,9 @@
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <![endif]-->
 </head>
-<header>
+
+<body>
+    <!-- start navigation content -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -74,9 +76,9 @@
         <! -- .topBar -->
     </nav>
     <!-- .navbar .navbar-default -->
-</header>
-
-<body>
+    <!-- *** Login Modal goes here *** -->
+    <!-- *** Register Modal goes here *** -->
+    <!-- end navigation content -->
     <!-- start jumbotron section -->
     <div class="jumbotron">
         <div class="container">
@@ -97,42 +99,43 @@
     <!-- .jumbotron -->
     <!-- end jumbotron section -->
     <!-- start main content -->
-    <!-- start box content -->
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="boxOne">
-                    <h3><span class="glyphicon glyphicon-book"></span>Headline</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-                    <a href="#" class="readMore">Read More</a>
+    <div class="container-fluid">
+        <!-- start box content -->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="boxOne">
+                        <h3><span class="glyphicon glyphicon-book"></span>Headline</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+                        <a href="#" class="readMore">Read More</a>
+                    </div>
+                    <!-- .boxOne -->
                 </div>
-                <!-- .boxOne -->
-            </div>
-            <!-- end .boxOne -->
-            <div class="col-md-4">
-                <div class="boxTwo">
-                    <h3><span class="glyphicon glyphicon-apple"></span>Headline</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-                    <a href="#" class="readMore">Read More</a>
+                <!-- end .boxOne -->
+                <div class="col-md-4">
+                    <div class="boxTwo">
+                        <h3><span class="glyphicon glyphicon-apple"></span>Headline</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+                        <a href="#" class="readMore">Read More</a>
+                    </div>
+                    <!-- .boxTwo -->
                 </div>
-                <!-- .boxTwo -->
-            </div>
-            <!-- end .boxTwo -->
-            <div class="col-md-4">
-                <div class="boxThree">
-                    <h3><span class="glyphicon glyphicon-piggy-bank"></span>Headline</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-                    <a href="#" class="readMore">Read More</a>
+                <!-- end .boxTwo -->
+                <div class="col-md-4">
+                    <div class="boxThree">
+                        <h3><span class="glyphicon glyphicon-piggy-bank"></span>Headline</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+                        <a href="#" class="readMore">Read More</a>
+                    </div>
+                    <!-- .boxThree -->
                 </div>
-                <!-- .boxThree -->
+                <!-- end .boxThree -->
             </div>
-            <!-- end .boxThree -->
+            <! -- .row -->
         </div>
-        <! -- .row -->
-    </div>
-    <!-- end box content -->
-    <!-- start panel content -->
-    <div class="row padTop-1em">
+        <!-- end box content -->
+        <div class="row padTop-1em"></div>
+        <!-- start panel content -->
         <div class="col-md-8">
             <div class="articleContent">
                 <div class="panel panel-default">
@@ -181,12 +184,13 @@
                     <!-- .panel-body -->
                 </div>
                 <!-- .panel panel-default -->
-
+                <!-- end panel content -->
             </div>
             <!-- .articleContent -->
-
         </div>
         <!-- .col-md-8 -->
+        <!-- end panel content -->
+        <!-- start sidebar content -->
         <div class="col-md-4">
             <div class="sideBar">
                 <div class="list-group">
@@ -216,37 +220,26 @@
                         </a>
                     </div>
                     <!-- .list-group -->
-
-
                 </div>
-                <!-- .sideBar -->
-
+                <!-- .customContent .list-group -->
+                <!-- end bootstrap 'custom content' list group -->
             </div>
-            <!-- .col-md-4 -->
-
+            <!-- .sideBar -->
         </div>
+        <!-- col-md-4 -->
+        <!-- end sidebar content -->
+    </div>
+    <!-- end main content -->
+    <!-- start footer content -->
+    <footer>
+        <p class="copyRight">Copyright &copy; 2016, ComanyNameHere???</p>
+    </footer>
 
-
-
-
-
-        <!-- end panel content -->
-        <!-- main .container -->
-        <!-- start footer content -->
-
-
-
-
-        <footer>
-
-
-        </footer>
-
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-        <!--Custom JavaScript-->
-        <script src="js/script.js"></script>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <!--Custom JavaScript-->
+    <script src="js/script.js"></script>
 </body>
 
 </html>
