--- a/0_BasicBootstrapWebsiteTemplate/index.html
+++ b/0_BasicBootstrapWebsiteTemplate/index.html
@@ -12,7 +12,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
     <!--Custom CSS-->
+    <!-- custom/google fonts goes here -->
     <link rel="stylesheet" href="css/style.css" />
+    <!-- browser tab icon -->
+    <link rel="shortcut icon" href="images/ico/???">
+    <!-- end Custom CSS Files-->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
